# identifyingSortingAlgorithms

./: .gitignore  CMakeLists.txt  README.md  SortingTestsOuptut.csv  main.cpp  sortertester.cpp  sortertester.h  testmysteryalgorithms.cpp  testmysteryalgorithms.h  timealgorithm.cpp  timealgorithm.h
.github/workflows/: build.yml
